fixed layout issues

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -10,9 +10,13 @@ h1{
     font-size: 40px !important;
 }
 
+.quicksand-font{
+    font-family: 'Quicksand', Arial, Helvetica, sans-serif;
+}
+
 .container{
     display: flex;
-    height: 90vh;
+    min-height: calc(100vh - 60.22px - 18px);
 }
 
 #form{
@@ -25,6 +29,8 @@ h1{
     align-items: center;
     align-self: center;
     height: auto;
+    margin-top: 18px;
+    margin-bottom: 18px;
 }
 
 input{
@@ -42,23 +48,23 @@ button{
 }
 
 footer{
-    position: fixed;
-    bottom: 0;
     display: flex;
     justify-content: center;
     width: 100%;
+    padding: 15px;
 }
 
 footer h2{
     color: #E7E7EB !important;
     font-family: 'Quicksand';
     text-align: center;
+    margin-bottom: 0px;
 }
 
 #div-alerts{
     display: flex;
     flex-flow: row wrap;
-    position: relative;
+    position: absolute;
     top: 0;
     width: 100%;
 }
@@ -129,5 +135,10 @@ footer h2{
     
     footer{
         bottom: 0px !important;
+    }
+
+    button{
+        width: 75%;
+        font-size: 25px !important;
     }
 }
